syntax = "proto3";

option go_package = "./goUpstreamTelemetry";

package hubedgeproxytelemetry;

// The greeting service definition.
service Telemetry {
  // Sends TelemetryData to IOT Edge
  rpc SendTelemetry (TelemetryRequest) returns (TelemetryResponse);

  // Sends TelemetryBatch Data to IOT Edge
  rpc SendTelemetryBatch (TelemetryBatchRequest) returns (TelemetryResponse);
}

// The request message containing the user's name.
message TelemetryRequest {
  string ApplicationName = 1;
  string TelemetryData = 2;
}

message TelemetryBatchRequest {
  string ApplicationName = 1;
  repeated string TelemetryData = 2;
}

// The response message containing the greetings.
message TelemetryResponse {
  int32 Code = 1;
  string Message = 2;
}
